--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "3-code-challenges",
   "version": "1.0.0",
-  "description": "",
+  "description": "Daily code challenges",
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage --verbose",
@@ -12,5 +12,14 @@
   "license": "MIT",
   "dependencies": {
     "jest": "^24.1.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RandeeOrion/data-structures-and-algorithms.git"
+  },
+  "bugs": {
+    "url": "https://github.com/RandeeOrion/data-structures-and-algorithms/issues"
+  },
+  "homepage": "https://github.com/RandeeOrion/data-structures-and-algorithms#readme"
 }
