--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Daily code challenges",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "lint": "eslint **/*.js",
     "test": "jest --coverage --verbose",
     "watch": "jest --watchAll"
   },
